Fix alignment for side by side videos

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -345,7 +345,7 @@ article video:has(+ video) {
   margin-right: var(--ifm-leading);
 }
 
-article p + video {
+article p ~ video {
   margin-top: 0;
 }
 
